Fixed z-index of search area

--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -20,6 +20,7 @@
   width: calc(100% - 201.09px - 80px);
   border-bottom: 1.5px solid $grey-border;
   border-left: 1.5px solid $grey-border;
+  z-index: -1;
 
   input {
     margin-top: 20px;
